# keep2notion

./: .env.sample  .gitignore  README.md  _notion_test.http  keep2note.py
image-server/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerpush.sh  Makefile  k8s-deployment.yaml  sqlx-data.json
image-server/migrations/: 20220917143042_first.sql
image-server/src/: db.rs  main.rs
keep-data/: README.md
