[package]
name = "image-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite", "uuid", "offline"] }

tracing = "0.1.36"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-opentelemetry = "0.17.4"

tokio = { version = "1.20.1", features = ["full"]}
anyhow = "1.0.60"
serde = "1.0"
serde_json = "1.0"
uuid = { version="1.1.2", features = ["v4", "serde"] }
thiserror = "1.0.35"
futures-util = "0.3.24"
image = "0.24.3"
